# smart-web-scraper

./: .env.example  README.md  app.py  pyproject.toml  scraping_agent.py
